@@ -1,0 +1,6 @@
+[Desktop Entry]
+Name=DataExplore
+Exec=dataexplore
+Type=Application
+Icon=${SNAP}/meta/gui/icon.png
+Categories=Education;
