@@ -1,0 +1,43 @@
+name: dataexplore
+version: '0.12.2'
+#version-script: git describe --abbrev=1 --tags
+summary: data plotting and analysis package
+description: |
+  DataExplore is an open source desktop application for data analysis and plotting
+  intended for use in both research and education. The program allows quick
+  visualization of data, table manipulation tools and supports large data tables.
+
+base: core18
+grade: stable
+confinement: strict
+icon: img/logo.png
+#adopt-info: dataexplore
+
+apps:
+  dataexplore:
+    command: desktop-launch $SNAP/bin/dataexplore
+    plugs: [desktop,desktop-legacy,unity7,home]
+
+parts:
+  dataexplore:
+    plugin: python
+    python-version: python3
+    source: .
+    stage-packages:
+      [python3-tk,xsel,fontconfig-config,fonts-freefont-ttf,ttf-ubuntu-font-family,
+      fonts-liberation,ttf-dejavu-core,ttf-mscorefonts-installer]
+    after: [desktop-glib-only]
+
+#  files: #to deal with problem finding init.tcl
+#    plugin: dump
+#    source: /usr/share/tcltk/
+#    organize:
+#         '*': ./usr/lib/
+  desktop-glib-only:
+      source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+      source-subdir: glib-only
+      plugin: make
+      build-packages:
+        - libglib2.0-dev
+      stage-packages:
+        - libglib2.0-bin
