@@ -10,6 +10,7 @@ Added editable parameter to Table
 Added enable_menus parameter
 Option to import numbers as string
 Changed to pickle for dataexplore project files
+Fixes to syncing of rowcolors
 
 ------
 0.12.1
